--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "311_wk2_day2_express-continued",
   "version": "1.0.0",
-  "description": "",
+  "description": "Initialize and run the app: `npm install` && `npm start`.",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Brighton Young",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.14.0",
-    "mysql": "^2.17.1",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^1.18.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brightonyoung/311_wk4_day2_node_mysql.git"
+  },
+  "bugs": {
+    "url": "https://github.com/brightonyoung/311_wk4_day2_node_mysql/issues"
+  },
+  "homepage": "https://github.com/brightonyoung/311_wk4_day2_node_mysql#readme"
 }
